Implemented the remaining functionality of mybooks tab including modify book, delete book, and also all function of tab of status